# QtAR

./: .gitignore  CLAUDE.md  README.md  requirements.txt
conformance/: CLAUDE.md  generate.py  manifest.json  spec.md  verify.py
conformance/assets/: ambiguous_ayat.json  ayah_phonemes.json  edit_cases.json  short_unit_blacklist.json  tokens.txt  unit_phonemes.json
conformance/fixtures/chain/: blacklist_run.json  clean_seg_run.json  early_prefix_run.json  junk_sandwich.json  noisy_sub_del.json  page_prior_run.json  soft_score_run.json  twin_context_run.json
conformance/fixtures/highlight/: defer_broken_sequence.json  defer_then_successor.json  resolve_predecessor.json  unambiguous_run.json  unresolvable_choice.json
conformance/fixtures/matcher/: clean_108_sequence.json  user_114_session.json
conformance/golden/chain/: blacklist_run.chain.json  clean_seg_run.chain.json  junk_sandwich.chain.json  noisy_sub_del.chain.json  soft_score_run.chain.json  twin_context_run.chain.json
conformance/golden/highlight/: defer_broken_sequence.states.json  defer_then_successor.states.json  resolve_predecessor.states.json  unambiguous_run.states.json  unresolvable_choice.states.json
conformance/golden/inference/: studio_ikhlas1_short.phonemes.txt  studio_naba1.phonemes.txt  user_114_quietmic.phonemes.txt
conformance/golden/matcher/: clean_108_sequence.events.json  user_114_session.events.json
conformance/golden/streaming/: studio_alaq1_long.phonemes.txt  studio_naba1.phonemes.txt  user_114_quietmic.phonemes.txt
data/: CLAUDE.md  COVERAGE.md  align_continuous.py  build_lexicon.py  build_manifests.py  build_segment_words.py  build_segments.py  derive_aya_ids.py  download_continuous.py  extract_audio.py  extract_continuous_pcm.py  extract_retasy.py  make_phase2_splits.py  make_phase3_manifest.py  make_phase3_windows.py  prepare.py  quran_g2p.py  retasy_flag.py  retasy_review.py  retasy_verdicts.json  run_align_all.cmd  segment_waqf.py
data/lang/: ambiguous_ayat.json  ambiguous_units.json  ayah_phonemes.json  segment_phonemes.json  segment_words.json  short_unit_blacklist.json  tokens.txt
data/manifests/: ayah_text.json
data/raw/audio_bench/real/: labels.csv  labels_proposed.csv
data/raw/continuous/sources/: abdulbasit_mujawwad.json  abdulbasit_murattal.json  alafasy.json  alafasy_tarteel.json  huthayfi.json  ibrahim_al_akhdar.json  mahmood_ali_albana.json  muhammad_jibreel.json  yasser_ad_dussary.json
demo/: CLAUDE.md  analyze_session.py  auto.py  live_detect.py  regression.py  sliding.py  streaming.py
demo/test_fixtures/: user_114_quietmic_events.jsonl  user_78_38to40_naba_continuous_b_events.jsonl  user_78_38to40_naba_continuous_events.jsonl  user_78_40_naba_long_events.jsonl  user_85_12to16_buruj_events.jsonl  user_98_1to3_bayyinah_paused_events.jsonl  user_98_1to4_bayyinah_mixed_events.jsonl
docs/: mobile-audio-capture.md  privacy-policy.html  sdk-architecture.md
docs/store/: listing.md
eval/: CLAUDE.md  evaluate.py  tune_commit.py
export/: CLAUDE.md  export_onnx.py  streaming-export-plan.md  streaming_encoder.py  streaming_layer.py  streaming_runtime.py
matcher/: CLAUDE.md  find_ambiguous.py  highlight_controller.py  phoneme_matcher.py
research/: CLAUDE.md  audio_bench.py  build_noisy_cache.py  calib_live_sweep.py  calib_page_prior.py  calib_probe.py  chain_decoder.py  chain_sliding.py  collision_rank.csv  collision_rank.py  continuous_eval.py  dissect_misses.py  label_sessions.py  oracle_funnel.py  probe_suppression.py  rebuild_cache.py  salat_data_collection_spec.md  salat_eval.py  salat_probe.py  segment_ablation.py
sdk/: README.md
sdk/android/: README.md  build.gradle.kts  keystore.properties.example  settings.gradle.kts
sdk/android/demo/: build.gradle.kts
sdk/android/demo/src/main/: AndroidManifest.xml
sdk/android/demo/src/main/kotlin/com/quranrecite/demo/: MainActivity.kt
sdk/android/demo/src/main/kotlin/com/quranrecite/demo/mushaf/: MushafFonts.kt  MushafModels.kt  MushafPageView.kt  MushafRepository.kt  MushafScreen.kt
sdk/android/demo/src/main/kotlin/com/quranrecite/demo/ui/: AppPalette.kt
sdk/android/demo/src/main/res/values/: ic_launcher_background.xml  strings.xml
sdk/android/demo/src/main/res/xml/: file_paths.xml
sdk/android/quranrecite/: build.gradle.kts
sdk/android/quranrecite/src/main/: AndroidManifest.xml
sdk/android/quranrecite/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
sdk/android/quranrecite/src/main/kotlin/com/quranrecite/sdk/: AudioCapture.kt  ModelManager.kt  QuranReciteDetector.kt
sdk/core/: CMakeLists.txt
sdk/core/include/quranrecite/: detector.h  types.h
sdk/core/src/: assets.cpp  assets.h  autodet.cpp  autodet.h  chain.cpp  chain.h  decoder.cpp  decoder.h  detector.cpp  frontend.cpp  frontend.h  highlight.cpp  highlight.h  inference.cpp  inference.h  matcher.cpp  matcher.h  segmenter.cpp  segmenter.h  stream.cpp  stream.h  streaming.cpp  streaming.h  vad.cpp  vad.h
sdk/core/tests/: conformance_runner.cpp  test_detector.cpp  test_frontend.cpp  test_inference.cpp  test_matcher.cpp  test_streaming.cpp  test_vad.cpp
sdk/design/: UI_SPEC.md
training/: CLAUDE.md  RESUME.md  augment.py  data.py  ffmpeg_fix.py  model.py  run_bob_retrain.cmd  run_p31_restore.cmd  run_p3_retrain.cmd  train.py  train_supervisor.py
